Changed redirect url

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,14 +29,14 @@
       //   left: "-=980"
       // });
       console.log('left');
-      location.href='http://localhost:3000/';
+      location.href='https://movietinder.herokuapp.com';
     }
     else if(e.keyCode == 39) { // right
       // $("#showroom").animate({
       //   left: "+=980"
       // });
       console.log('right');
-      location.href='http://localhost:3000/';
+      location.href='https://movietinder.herokuapp.com';
     }
   });
 </script>
